# coding-agent-eval

./: .gitignore  README.md  dummy-tests.md  package-lock.json  package.json  proposal.md  pyproject.toml
benchmarks/: README.md
benchmarks/cae-suite/: suite.json
benchmarks/cinterp/: cinterp  task.json
benchmarks/dummy-hello/: task.json
benchmarks/dummy-math/: suite.json  task.json
benchmarks/dummy-multi/: task.json
benchmarks/dummy-retry/: task.json
benchmarks/dummy-smoke/: task.json
benchmarks/dummy-suite/: suite.json  task.json
benchmarks/log-stats/: ref-impl.py  suite.json  task.json
benchmarks/nlm-eval/: ref-impl.py  suite.json  task.json
benchmarks/pyc/: task.json
benchmarks/pyc/ref/: pyc
benchmarks/test-fail/: task.json
benchmarks/test-pass/: task.json
benchmarks/test-retry/: suite.json  task.json
benchmarks/test-suite/: suite.json
docs/: agent-template.md  container-mode.md  manager-lifecycle.md  manager-pseudocode.md  protocol.md  user-guide-other-harnesses.md
images/: Dockerfile  Dockerfile.pi
scripts/: build-images.sh  build-local-image.sh  run-integration-tests.py  setup-cn-mirrors.sh
src/cae/: __main__.py  agent_client.py  benchmark.py  cli.py  manager.py  protocol.py  runtime.py  scoring.py  suite.py  template.py  tester.py  worker.py
templates/echo/: .cae-env  .cae-startup.sh  README.md
templates/pi/: .cae-env  .cae-startup.sh  README.md
tests/: test_benchmark.py  test_integration_probe.py  test_manager.py  test_protocol.py  test_runtime.py  test_scoring.py  test_template.py  test_tester.py  test_worker.py
(+127 files in other folders)
